# wasm_synth

./: .gitignore  Cargo.toml  Trunk.toml  index.html
src/: lib.rs
